# bit

./: .gitignore  README.md  pyproject.toml
src/bit/: __init__.py  cli.py
src/bit/commands/: __init__.py  clone.py  dev.py  genkey.py  push.py
tests/: __init__.py  test_cli.py  test_clone.py  test_dev.py  test_genkey.py  test_push.py
