[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit"
version = "0.1.0"
description = "A set of CLI tools for developers"
requires-python = ">=3.8"
readme = "README.md"

[project.scripts]
bit = "bit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
